@@ -10,8 +10,8 @@ class FinalprojectApplicationTests {
 	void testGetStatuses() {
 		java.util.List<String> list = java.util.Arrays.stream(com.epiis.finalproject.staticdata.EnumAcademicPeriod.values())
 				.map(com.epiis.finalproject.staticdata.EnumAcademicPeriod::toString)
-				.collect(java.util.stream.Collectors.toList());
-		System.out.println("STATUSES LIST: " + list);
+				.toList();
+		org.junit.jupiter.api.Assertions.assertFalse(list.isEmpty());
 	}
 
 }
